--- a/SampleApp-Swift/Info.plist
+++ b/SampleApp-Swift/Info.plist
@@ -36,9 +36,7 @@
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Photo Library Privacy Setting for LiveEngage iOS SDK</string>
 	<key>UIBackgroundModes</key>
-	<array>
-		<string>remote-notification</string>
-	</array>
+	<array/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
